# cookiecutter-python-project

./: .example-cookiecutterrc  CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml
.github/: settings.yml
{{cookiecutter.project_name}}/.github/workflows/: default.yml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.project_parent_dir}}/: .gitlab-ci.yml  .travis.yml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
{{cookiecutter.project_parent_dir}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_parent_dir}}/.github/: settings.yml
{{cookiecutter.project_parent_dir}}/.github/workflows/: default.yml
{{cookiecutter.project_parent_dir}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  cli.py  logger.py  release.py
{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  README.md  requirements-dev.txt
{{cookiecutter.project_slug}}/.github/workflows/: default.yml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
